--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ transition: 0.3s;
 }
 
 .nav-list.active {
+display: flex;
 transform: translateX(0);
 }
 
@@ -404,6 +405,7 @@ font-size: 20px;
 }
 
 .nav-list {
+display: none;
 position: absolute;
 top: 8vh;
 right: 0;
@@ -414,8 +416,8 @@ z-index: 5;
 flex-direction: column;
 align-items: center;
 justify-content: flex-start;
-transform: translateX(100%);
-transition: transform 0.3s ease-in;
+transform: translateX(150%);
+transition: transform 15s ease-in;
 }
 .nav-list li {
 margin-left: 0;
