--- a/style.css
+++ b/style.css
@@ -58,12 +58,13 @@ justify-content: space-around;
 align-items: center;
 font-family: Sublima;
 background: #23232e;
-height: 12vh;
+height: 80px;
 }
 
 #iconinsta {
 
-width: 25px;
+width: 15px;
+margin-top: 5px;
 }
 
 .nav-list {
@@ -126,7 +127,7 @@ transform: rotate(45deg) translate(-5px, -7px);
 
       /* MAIN */
 main {
-margin: 25px 16% 25px 16%;
+margin: 25px 16% 0 16%;
 animation: animaçãoPort 1.0s ease-in 0s;
 }
 
@@ -149,6 +150,7 @@ width: 75%;
 width: 100%;
 height: 100%;
 object-fit: cover;
+object-position: center;
 animation: animaçãoPort 1.0s ease-in 0s;
 }
 
@@ -199,12 +201,15 @@ opacity: 1;
 
               /* Footer */
 footer {
-margin: 40px auto 10px 0;
+position: relative;
+bottom: 0;
+height: 12vh;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
-.footer-about{
-  margin-top: 20px;
-}
+
 
 footer p{
 font-size: 9px;
@@ -215,8 +220,8 @@ text-align: center;
 
               /* ABOUT */
 
-.body-about{
-  overflow-y: hidden;
+.main-about{
+  height: 72vh;
 }
 
 .all-about{
@@ -358,9 +363,217 @@ color: white;
 }
 
 .span-services2 {
-text-align: end;
+  text-align: end;
+  
+}
+
+/*   CONTATO    */
+
+.header-form{
+display: flex;
+justify-content: center;
+align-items: flex-start;
+}
+
+.h1-form{
+font-family: Sublimabold;
+color: white;
+font-size: 30px;
+line-height: 35px;
+text-transform: uppercase;
+}
+
+.p-form{
+font-family: Sublima;
+margin-top: 5px;
+}
+
+
+
+
+
+.div-form{
+display: flex;
+justify-content: space-between;
+align-items: center;
+height: 500px;
+flex-wrap:  wrap;
+margin-top: 100px;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin-bottom: 20px;
+}
+
+button {
+  border-radius: 30px;
+  border: none;
+  height: 50px;
+  width: 25%;
+  background-color: rgb(112, 106, 197);
+  color: white;
+  font-weight: bold;
+  margin-top: 20px;
+  font-family: Sublimabold;
+  letter-spacing: 2px;
+  font-size: 15px;
+}
+
+button:hover{
+cursor: pointer;
+background-color: white;
+color: rgb(112, 106, 197) ;
+}
+
+input{
+  margin-top: 5px;
+  height: 20px;
+  padding: 15px;
+  border-radius: 30px;
+  border: none;
+  font-size: 15px;
+  background-color: rgb(112, 106, 197);
+  color: white;
+  font-family: Sublima;
+}
+
+.input-msg {
+height: 120px
+}
+
+
+.name {
+width: 46%;
+}
+
+.sobrenome {
+margin-left: 5px;
 
 }
+
+.p-name{
+width: 300px;
+display: block;
+}
+
+.p-sobrenome{
+  margin-left: 17%;
+}
+
+.none{
+  display: none;
+}
+
+.div-form-name {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.div-aside{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  
+}
+
+.img-contato{
+height: 15px;
+
+}
+
+#icon-contato{
+  width: 15px;
+}
+
+.p-contato{
+  font-size: 12px;
+  margin-left: 10px;
+  
+}
+
+aside{
+  width: 250px;
+}
+
+               /* Obrigado */
+.main-obrigado{
+  height: 76vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.h1-obrigado{
+  color: white;
+  font-family: Sublimabold;
+  margin-bottom: 150px;
+  font-size: 50px;
+}
+
+
+
+
+@media (max-width: 1750px) {
+form{
+width: 100%;
+}
+
+aside{
+  width:100%;
+  margin-top: 50px;
+}
+  .name {
+width: 100%;
+}
+  
+.p-sobrenome{
+margin-left: 0%;
+display: none;
+}
+
+.none{
+display: block;
+}
+
+.enviar-msg{
+  width: 100%;
+}
+
+.div-aside{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-contato{
+  width: 10px;
+}
+
+.p-contato{
+font-size: 10px;
+}
+
+.footer-contato{
+
+  margin-top: 140px;
+}
+
+form [type="submit"]{
+  width: 100%;
+}
+
+}
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 1330px) {
@@ -394,10 +607,6 @@ overflow-x: hidden;
 
 main{
 margin: 30px 4% 0px 4%;
-}
-
-footer {
-bottom: 0;
 }
 
 .title-index h1{
@@ -497,6 +706,11 @@ font-family: Sublimabold;
 font-size: 25px;
 text-transform: uppercase;
 }
+
+.main-about{
+height: 102vh;
+}
+
 }
 
 
